# FFMPEGDemo

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/ffmpegdemo/: MainActivity.java
app/src/main/java/com/example/ffmpegdemo/record/: GlobalConfig.java  RecordActivity.java
app/src/main/java/com/example/ffmpegdemo/sufaceview/: MySurfaceView.java
app/src/main/res/layout/: activity_main.xml  activity_record.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
